<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

                <EditText
                    android:id="@+id/teamA_editable"
                    android:layout_width="82dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:ems="10"
                    android:hint="@string/New_team_name"
                    android:inputType="text"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/teamA_score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/teamB_editable"
                    android:layout_width="82dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:ems="10"
                    android:hint="@string/New_team_name"
                    android:inputType="text"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/teamA_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:text="@string/teamA_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/team_name_text_size"
                    app:layout_constraintBaseline_toBaselineOf="@+id/teamB_name"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/teamB_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/teamB_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/team_name_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/teamA_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/score_points"
                    android:textColor="@color/black"
                    android:textSize="90sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/teamA_3points"
                    app:layout_constraintEnd_toStartOf="@+id/start_pause_button"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/teamB_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="50dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="90dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/score_points"
                    android:textColor="@color/black"
                    android:textSize="90sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/start_pause_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/teamA_3points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:text="@string/points3_button"
                    android:textSize="@dimen/button_text_size"
                    android:backgroundTint="@color/green_middle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/teamB_3points"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/teamA_2points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_wide"
                    android:text="@string/points2_button"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintBaseline_toBaselineOf="@+id/teamB_2points"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/teamA_1point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/points1_button"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintBaseline_toBaselineOf="@+id/teamB_1point"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/teamB_3points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/points3_button"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamB_score" />

                <Button
                    android:id="@+id/teamB_2points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/margin_wide"
                    android:text="@string/points2_button"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamB_3points" />

                <Button
                    android:id="@+id/teamB_1point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/points1_button"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamB_2points" />

                <ImageButton
                    android:id="@+id/done_teamA_name"
                    android:layout_width="@dimen/button_image_size"
                    android:layout_height="@dimen/button_image_size"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="56dp"
                    android:background="@drawable/ic_launcher_foreground"
                    android:scaleType="fitXY"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@+id/teamB_editable"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/teamA_editable"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/done"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/done_teamB_name"
                    android:layout_width="@dimen/button_image_size"
                    android:layout_height="@dimen/button_image_size"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="56dp"
                    android:background="@drawable/ic_launcher_foreground"
                    android:scaleType="fitXY"
                    android:visibility="invisible"
                    app:layout_constraintStart_toEndOf="@+id/teamB_editable"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/done"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/reset_button"
                    android:visibility="invisible"
                    android:backgroundTint="@color/green_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/teamB_1point"
                    app:layout_constraintVertical_bias="0.303"
                    tools:visibility="visible" />

                <ImageButton
                    android:id="@+id/edit_teamA_name"
                    android:layout_width="@dimen/button_image_size"
                    android:layout_height="@dimen/button_image_size"
                    android:layout_marginStart="88dp"
                    android:layout_marginTop="56dp"
                    android:background="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/edit_teamA_name"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toStartOf="@+id/teamB_name"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toStartOf="@+id/teamA_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/edit_pencil"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/edit_teamB_name"
                    android:layout_width="@dimen/button_image_size"
                    android:layout_height="@dimen/button_image_size"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/edit_teamB_name"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.989"
                    app:layout_constraintStart_toStartOf="@+id/teamB_editable"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/edit_pencil"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/start_pause_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_dark"
                    android:text="@string/time_button"
                    app:layout_constraintBottom_toTopOf="@+id/reset_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.259" />

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/time_text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/start_pause_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.913" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
